--- a/css/selectors/contact.css
+++ b/css/selectors/contact.css
@@ -1,6 +1,6 @@
 /*---------------------START OF CONTACTS--------------------------------*/
   .contactPage {
-    display: block;             
+    display: none;            
     height: 100%;
     width: 100%;
     font-family: "Press Start 2P";
@@ -59,7 +59,7 @@
     max-width: 100%;
     max-height: 100%;
   }
-  .resume{
+  /* .resume{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -70,7 +70,7 @@
   .resume img {
     max-width: 100%;
     max-height: 100%;
-  }
+  } */
 
   .closing {
     position: absolute;
